# IX-Operator

./: .editorconfig  .gitignore  Cargo.toml  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
crates/ix_crypto/: Cargo.toml
crates/ix_crypto/src/: aead.rs  asymmetric.rs  bindings.rs  error.rs  kdf.rs  lib.rs  rng.rs  traits.rs  types.rs
examples/: genesis.ix
src/ix_operator/: __init__.py  __main__.py  app.py  audit.py  bus.py  config.py  diagnostics.py  identity.py  logging.py  network.py  node.py  runtime.py
src/ix_operator/agents/: __init__.py  memory.py  models.py  registry.py
src/ix_operator/crypto/: __init__.py  native.py
src/ix_operator/ix/: __init__.py  ast.py  interpreter.py  parser.py
src/ix_operator/session/: __init__.py  handshake.py  manager.py  models.py  service.py  transcript.py
src/ix_operator/transport/: __init__.py  codec.py  local.py  packet.py  state.py
tests/: test_agent_bus.py  test_agent_registry.py  test_agents.py  test_app.py  test_audit.py  test_config.py  test_crypto_native.py  test_diagnostics.py  test_identity.py  test_ix_interpreter.py  test_ix_parser.py  test_main.py  test_operator_network.py  test_operator_node.py  test_session_handshake.py  test_session_manager.py  test_session_models.py  test_session_service.py  test_transport_codec.py  test_transport_local.py  test_transport_packet.py  test_transport_state.py
