[package]
name = "ix_crypto"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Rust cryptographic core for IX-Operator"

[lib]
name = "ix_crypto"
path = "src/lib.rs"

[dependencies]
ed25519-dalek = "2.1.1"
hkdf = "0.12.4"
rand = "0.8.5"
sha2 = "0.10.9"
x25519-dalek = "2.0.1"
